--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,11 @@
 <script>
   window.global = window;
 </script>
+<style>
+    html, body {
+        height: 100%;
+    }
+    .sb-main-fullscreen #storybook-root {
+        height: 100%;
+    }
+</style>
