--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,10 +2,11 @@
   window.global = window;
 </script>
 <style>
-    html, body {
-        height: 100%;
-    }
-    .sb-main-fullscreen #storybook-root {
-        height: 100%;
-    }
+  html,
+  body {
+    height: 100%;
+  }
+  .sb-main-fullscreen #storybook-root {
+    height: 100%;
+  }
 </style>
