--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,6 +1,10 @@
 <script>
   window.global = window;
 </script>
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
 <style>
   html,
   body {
